# metrics-sqlite

./: .gitignore  Cargo.toml  README.md  changelog.md
.github/workflows/: rust.yml
examples/: export_csv.rs  import_csv.rs  info.rs  large-file.rs  simple.rs
migrations/2020-08-11-225311_create_metrics/: down.sql  up.sql
migrations/2022-01-19-204521_create_metric_keys/: down.sql  up.sql
src/: lib.rs  metrics_db.rs  models.rs  recorder.rs  schema.rs
