[package]
name = "metrics-sqlite"
version = "0.2.0"
authors = ["Jeremy Knope <jeremy@astropad.com>"]
description = "Library for providing SQLite backend for metrics"
keywords = ["metrics", "sqlite"]
categories = ["debugging"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = "1.4"
# this seems to let us force bundled sqlite in diesel
libsqlite3-sys = { version = "0.18", features = ["bundled"] }
metrics = "0.14"
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4"
