[package]
name = "metrics-sqlite"
version = "0.4.0"
authors = ["Jeremy Knope <jeremy@astropad.com>"]
description = "Library for providing SQLite backend for metrics"
keywords = ["metrics", "sqlite"]
categories = ["development-tools::debugging"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/metrics-sqlite"
repository = "https://github.com/AstroHQ/metrics-sqlite/"

[dependencies]
diesel = { version = "2.0.3", features = ["sqlite"] }
diesel_migrations = "2.0.0"
# this seems to let us force bundled sqlite in diesel
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
metrics = "0.20.1"
thiserror = "1.0"
log = "0.4"
csv = {version = "1.1.6", optional = true }
serde = { version = "1.0.125", optional = true }

[dev-dependencies]
pretty_env_logger = "0.4"

[features]
default = []
log_dropped_metrics = []
export_csv = ["csv", "serde/derive"]
import_csv = ["csv", "serde/derive"]

[[example]]
name = "export_csv"
required-features = ["export_csv"]

[[example]]
name = "import_csv"
required-features = ["import_csv"]
